# shell-executor-mcp

./: .gitignore  main.py  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  database.py  models.py  shell_executor.py  shell_verifier.py  vault_manager.py
tests/: __init__.py  test_shell_verifier.py
tests/test_data/: high_firewall_config.sh  low_backup_home.sh  low_system_info.sh  mal_critical_ransomware.sh  mal_critical_rootkit.sh  mal_critical_ssh_exfil.sh  mal_high_credential_stealer.sh  mal_high_cryptominer.sh  mal_medium_reverse_shell.sh  medium_cleanup.sh  medium_service_monitor.sh
